samples/_failures_safe/1761091360_4c5263_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_93b1d928.c: In function ‘main’:
./samples/SAFE/__tmp_93b1d928.c:154:5: error: expected declaration or statement at end of input
  154 |     }
      |     ^
